# hska-compiler

./: .cproject  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  run_parser_tests.sh
Visual Studio/: hska-compiler.sln  hska-compiler.vcxproj  hska-compiler.vcxproj.filters
doc/part2/: main.tex
doc/part2/diagramms/: parser.uxf
documentation/: diagram.mdj  doc.tex  symtable_diagram.mdj
documentation/charts/: hashtable_distribution.csv
documentation/part2/: doc.tex
output/: parser01.txt  scanner7.txt
src/: main.cpp
src/buffer/: Makefile
src/buffer/headers/: Buffer.h
src/buffer/include/: Buffer.h
src/buffer/src/: Buffer.cpp  Buffer_Test.cpp
src/parser/: Makefile
src/parser/include/: CodeGenerator.h  Node.h  ParseTree.h  Parser.h
src/parser/src/: CodeGenerator.cpp  Node.cpp  ParseTree.cpp  Parser.cpp  Parser_Test.cpp
src/scanner/: Makefile
src/scanner/headers/: Scanner.h  Token.h
src/scanner/include/: Scanner.h  Token.h
src/scanner/src/: Scanner.cpp  Scanner_Test.cpp  Token.cpp
src/state-machine/: Makefile
src/state-machine/headers/: Condition.h  Core.h  EpsilonTransition.h  LanguageParser.h  MultiCharTransition.h  SingleCharTransition.h  State.h  StateMachine.h  Transition.h  Transitions.h
src/state-machine/include/: Condition.h  LanguageParser.h  State.h  StateMachine.h  TokenPosition.h  TokenScanner.h  Transition.h  TransitionTable.h
src/state-machine/src/: EpsilonTransition.cpp  LanguageParser.cpp  MultiCharTransition.cpp  SingleCharTransition.cpp  State.cpp  StateMachine.cpp  StateMachine_Test.cpp  TokenPosition.cpp  TokenScanner.cpp  Transition.cpp  TransitionTable.cpp
src/symbol-table/: Makefile
src/symbol-table/headers/: Information.h  StringTab.h  StringTabNode.h  SymbolTable.h  SymbolTableEntry.h
src/symbol-table/include/: Information.h  StringTab.h  StringTabNode.h  SymbolTable.h  SymbolTableEntry.h
src/symbol-table/src/: Information.cpp  StringTab.cpp  StringTabNode.cpp  SymbolTable.cpp  SymbolTableEntry.cpp  SymbolTable_Test.cpp
src/utils/header/: vector.h
src/utils/include/: Helper.h  colormod.h  unistd_osinv.h  utils.h  vector.h
src/utils/src/: Helper.cpp  helper_test.cpp  vector_test.cpp
src/vector/: vector.h  vector_test.cpp
test-files/: p7aTest.txt  parser01.txt  parser02.txt  parser03.txt  parser04.txt  scanner00.txt  scanner1.txt  scanner5.txt  scanner9.txt  test-code.txt  test_01.txt  test_02.txt
